--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "next": "14.2.10",
+    "@radix-ui/react-slot": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.5",
+    "lucide-react": "^0.462.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "typescript": "^5.7.3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.0"
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "tailwindcss": "^3.4.18",
+    "tailwindcss-animate": "^1.0.7",
+    "eslint": "8.57.0",
+    "eslint-config-next": "^14.2.4"
   }
 }
