--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "@types/node": "^20",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "postcss": "^8.4.49",
+    "autoprefixer": "^10.4.20",
     "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
     "eslint": "8.57.0",
