--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,28 +6,43 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "next": "14.2.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.462.0",
+    "next": "14.2.10",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "tailwind-merge": "^2.5.5",
-    "lucide-react": "^0.462.0"
+    "use-debounce": "^10.0.6"
   },
   "devDependencies": {
-    "typescript": "^5.7.3",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "postcss": "^8.4.49",
     "autoprefixer": "^10.4.20",
+    "eslint": "8.57.0",
+    "eslint-config-next": "^14.2.4",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
-    "eslint": "8.57.0",
-    "eslint-config-next": "^14.2.4"
+    "typescript": "^5.7.3"
   }
 }
